# Cmake-Moatasem-Elsayed

./: README.md  notes and cmd
LAB_1/: CMakeLists.txt  main.cpp
LAB_2/: CMakeLists.txt  main.cpp
LAB_3/: CMakeLists.txt  main.cpp
LAB_4/: CMakeLists.txt
LAB_4/lib/: CMakeLists.txt
LAB_5/: CMakeLists.txt  main.cpp
LAB_5/lib/: CMakeLists.txt  Wifi.cpp  Wifi.hpp
LAB_6/: CMakeLists.txt  defaultConfig.h.in  main.cpp
LAB_7/: CMakeLists.txt  main.cpp
LAB_8_Cmake_Function_Cache_While/: CMakeLists.txt  main.cpp
LAB_8_Cmake_Function_Cache_While/lib/: CMakeLists.txt
LAB_9CMake compile, install/: CMakeLists.txt  defaultConfig.h.in  main.cpp
LAB_9CMake compile, install/src/: calc.cpp
